# askama-macro-benchmark

./: .gitignore  Cargo.toml
askama-bench-app/: Cargo.toml
askama-bench-app/src/: main.rs  templates.rs
askama-bench-app/templates/: index_001.html  index_045.html
askama-bench-lib/: Cargo.toml
askama-bench-lib/src/: generator.rs  lib.rs
askama-bench-lib/templates/: gen-templates.txt  index_001.html
