[package]
name = "askama-bench-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# askama = "0.12.0"
# askama = { git = "https://github.com/wrapperup/askama", branch = "cache-templates" }
askama = { path = "../../askama/askama" }
